Upload of current work

--- a/Python/Stock Market(Experimentation)/Stock Market ML.ipynb
+++ b/Python/Stock Market(Experimentation)/Stock Market ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -30,8 +30,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\samuel\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\discriminant_analysis.py:682: UserWarning: Variables are collinear\n",
-      "  warnings.warn(\"Variables are collinear\")\n",
       "c:\\users\\samuel\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\preprocessing\\label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
       "  if diff:\n"
      ]
@@ -40,8 +38,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7201458523245214\n",
-      "Predicted spread: Counter({0: 470, 1: 372, -1: 255})\n"
+      "Accuracy: 0.9134001823154057\n",
+      "Predicted spread: Counter({-1: 381, 0: 376, 1: 340})\n"
      ]
     },
     {
@@ -120,18 +118,17 @@
     "                                            df['{}_8d'.format(ticker)],\n",
     "                                            df['{}_9d'.format(ticker)],\n",
     "                                            df['{}_10d'.format(ticker)]))\n",
+    "    \n",
     "    vals = df['{}_target'.format(ticker)].values.tolist()\n",
     "    str_vals = [str(i) for i in vals]\n",
     "    print('Data spread', Counter(str_vals))\n",
-    "    \n",
     "    df.fillna(0, inplace=True)\n",
-    "\n",
     "    df = df.replace([np.inf, -np.inf], np.nan)\n",
     "    df.dropna(inplace=True)\n",
     "\n",
-    "    df_vals = df[[ticker for ticker in tickers]].pct_change()\n",
+    "    df_vals = df[ticker].pct_change()\n",
     "    df_vals = df_vals.replace([np.inf, -np.inf], 0)\n",
-    "    df_vals = pd.concat([df_vals, df.loc[:,'{}_20ma'.format(ticker):'{}_20-50ma_7d'.format(ticker)]], axis=1)\n",
+    "    df_vals = pd.concat([df_vals, df.loc[:,'{}_20ma'.format(ticker):'{}_20-50ma_10d'.format(ticker)]], axis=1)\n",
     "    df_vals.fillna(0, inplace=True)\n",
     "\n",
     "    X = df_vals.values\n",
@@ -146,19 +143,17 @@
     "    clf = VotingClassifier([('lsvc', svm.LinearSVC()),\n",
     "                            ('knn', neighbors.KNeighborsClassifier()),\n",
     "                            ('rfor', RandomForestClassifier()),\n",
-    "                            ('gpc', GaussianProcessClassifier(1.0 * RBF(1.0))),\n",
     "                            ('svc', SVC(gamma=2, C=1)),\n",
     "                            ('dtc', DecisionTreeClassifier()),\n",
-    "                            ('abc', AdaBoostClassifier()),\n",
-    "                            ('gnb', GaussianNB()),\n",
-    "                            ('qda', QuadraticDiscriminantAnalysis())])\n",
+    "                            ('abc', AdaBoostClassifier())])\n",
     "\n",
     "    clf.fit(X_train, y_train)\n",
     "    confidence = clf.score(X_test, y_test)\n",
     "    print('Accuracy:', confidence)\n",
     "    predictions = clf.predict(X_test)\n",
     "    print('Predicted spread:', Counter(predictions))\n",
-    "\n",
+    "    \n",
+    "    pickle.dump(clf, open('machine.pickle', 'wb'))\n",
     "    return df\n",
     "\n",
     "# with open('Stock Market/sp500tickers.pickle', 'rb') as f:\n",
